--- a/Diplomka/Diploma/DP_UHR0019/mybib.bib
+++ b/Diplomka/Diploma/DP_UHR0019/mybib.bib
@@ -114,6 +114,20 @@
   note = {2017-03-30}
 }
 
+
+@misc{louvain,
+  title = {LouvainSharp - Fast Louvain Method of Community Detection in C\#},
+  howpublished = {\url{http://www.markusmobius.org/software/louvainsharp-fast-louvain-method-community-detection-c}},
+  note = {2017-12-12}
+}
+
+
+@misc{canvas,
+  title = {Canvas.js},
+  howpublished = {\url{https://canvasjs.com/}},
+  note = {2018-04-20}
+}
+
 @misc{14,
   title = {vis.js},
   howpublished = {\url{http://visjs.org/}},
@@ -207,3 +221,52 @@
   year={1997}
 }
 
+
+@article{blondel2008fast,
+  title={Fast unfolding of communities in large networks},
+  author={Blondel, Vincent D and Guillaume, Jean-Loup and Lambiotte, Renaud and Lefebvre, Etienne},
+  journal={Journal of statistical mechanics: theory and experiment},
+  volume={2008},
+  number={10},
+  pages={P10008},
+  year={2008},
+  publisher={IOP Publishing}
+}
+
+@book{barabasi2016network,
+  title={Network science},
+  author={Barab{\'a}si, Albert-L{\'a}szl{\'o}},
+  year={2016},
+  publisher={Cambridge university press}
+}
+
+@article{luce1949method,
+  title={A method of matrix analysis of group structure},
+  author={Luce, R Duncan and Perry, Albert D},
+  journal={Psychometrika},
+  volume={14},
+  number={2},
+  pages={95--116},
+  year={1949},
+  publisher={Springer}
+}
+
+@inproceedings{flake2000efficient,
+  title={Efficient identification of web communities},
+  author={Flake, Gary William and Lawrence, Steve and Giles, C Lee},
+  booktitle={Proceedings of the sixth ACM SIGKDD international conference on Knowledge discovery and data mining},
+  pages={150--160},
+  year={2000},
+  organization={ACM}
+}
+
+@article{radicchi2004defining,
+  title={Defining and identifying communities in networks},
+  author={Radicchi, Filippo and Castellano, Claudio and Cecconi, Federico and Loreto, Vittorio and Parisi, Domenico},
+  journal={Proceedings of the National Academy of Sciences of the United States of America},
+  volume={101},
+  number={9},
+  pages={2658--2663},
+  year={2004},
+  publisher={National Acad Sciences}
+}
